syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.eventhub.agenda_service.proto";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}
message HelloRequest {
  string name = 1;
}
message HelloResponse {
  string message = 1;
}